--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
