--- a/package.json
+++ b/package.json
@@ -53,5 +53,8 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.23.4"
+  },
+  "imports": {
+    "#images/*": "./src/images/*"
   }
 }
