--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ DB_USER=mikolaj
 DB_PASSWORD=soyummy123
 DB_HOST=so-yummy.jysyaol.mongodb.net
 DB_NAME=So-Yummy
+REACT_APP_API_URL=https://localhost:5001/api
