--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/plugin-transform-private-property-in-object": "^7.23.4"
+    "@babel/plugin-transform-private-property-in-object": "^7.23.4",
+    "css-loader": "^6.10.0"
   },
   "imports": {
     "#images/*": "./src/images/*"
