--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "dotenv": "^16.4.4",
+    "express": "^4.18.2",
     "mongodb": "^6.3.0",
+    "mongoose": "^8.1.3",
     "nanoid": "^5.0.5",
+    "nodemon": "^3.0.3",
     "notiflix": "^3.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -54,6 +57,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.23.4"
   },
+  "type": "module",
   "imports": {
     "#images/*": "./src/images/*"
   }
