--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "imports": {
     "#images/*": "./src/images/*",
-    "#components/*": "./src/components/*"
+    "#components/*": "./src/components/*",
+    "#pages/*": "./src/pages/*"
   }
 }
