--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "soyummy",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rafalceglinsk.github.io/SoYummy",
+  "homepage": "https://candid-tartufo-7dc789.netlify.app",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
